--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,13 @@ branches:
 addons:
   apt:
     packages: libboost-all-dev
+    coverity_scan:
+      project:
+        name: "Sway.Framework"
+      notification_email: victor-timoshin@hotmail.com
+      build_command_prepend: "cov-configure --comptype gcc --compiler gcc-5"
+      build_command: "make VERBOSE=1"
+      branch_pattern: coverity_scan
 
 before_install:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
@@ -22,7 +29,7 @@ install:
 
 script:
   - make
-  - ./tests
+  - ./src/tests
   - sudo bash ./codecov.sh
 
 after_success:
